# SensorsStatus

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  SensorsStatus.apparmor  buildwithincontainer.sh  clickable.json  manifest.json.in
app/: CMakeLists.txt  NoData.qml  RowField.qml  SensorsStatus.desktop.in  SensorsStatus.qml
